# concoct

./: CHANGELOG.md  LICENSE  README.md  concoct.cabal
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
app/: Main.hs
examples/: UI.hs
src/: Concoct.hs
src/Concoct/: Internal.hs  View.hs
src/Concoct/View/: Build.hs  Internal.hs  Rebuild.hs  Skip.hs  Tree.hs  Unmount.hs
